unpackaged/main/default/objects/litify_pm__Matter__c/litify_pm__Matter__c.object-meta.xml
<CustomObject>
    <label>Matter</label>
    <nameField>
        <displayFormat>MAT-{YY}{MM}{DD}{0000}</displayFormat>
        <label>Matter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>