unpackaged/main/default/objects/litify_pm__Matter__c/fields/DOI_Text__c.field-meta.xml
<CustomField>
    <fullName>DOI_Text__c</fullName>
    <label>Incident Date (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>