unpackaged/main/default/objects/litify_pm__Matter__c/fields/IsDeceased__c.field-meta.xml
<CustomField>
    <fullName>IsDeceased__c</fullName>
    <formula>litify_pm__Client__r.litify_pm__lit_Is_Deceased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsDeceased</label>
    <type>Checkbox</type>
</CustomField>