unpackaged/main/default/objects/litify_pm__Matter__c/fields/IsMinor__c.field-meta.xml
<CustomField>
    <fullName>IsMinor__c</fullName>
    <formula>litify_pm__Client__r.IsMinor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMinor</label>
    <type>Checkbox</type>
</CustomField>