unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_ext__IsTeamMember__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__IsTeamMember__c</fullName>
    <formula>OR(
				CONTAINS(litify_ext__MTM_Ids__c, CASESAFEID($User.Id)),
				CONTAINS(litify_ext__MTM_Ids__c, CASESAFEID($User.Alias))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsTeamMember</label>
    <type>Checkbox</type>
</CustomField>