unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_ext__MTM_Ids__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__MTM_Ids__c</fullName>
    <label>MTM Ids</label>
    <type>TextArea</type>
</CustomField>