unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_ext__Private__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Private</label>
    <type>Checkbox</type>
</CustomField>