unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Assigned_To_Me__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Assigned_To_Me__c</fullName>
    <formula>OwnerId = $User.Id
||
CONTAINS(litify_pm__Abbreviated_Users_1__c, MID($User.Id, 4, 2) + MID($User.Id, 11, 5))
||
CONTAINS(litify_pm__Abbreviated_Users_2__c, MID($User.Id, 4, 2) + MID($User.Id, 11, 5))
||
CONTAINS(litify_pm__Abbreviated_Users_3__c, MID($User.Id, 4, 2) + MID($User.Id, 11, 5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Me</label>
    <type>Checkbox</type>
</CustomField>