unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Billable_Matter__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Billable_Matter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Billable Matter</label>
    <type>Checkbox</type>
</CustomField>