unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>litify_pm__Billable_Matter__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
            <value>
                <fullName>Alternative Fee Arrangement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>