unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Budget__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Budget__c</fullName>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>