unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Budget_Used__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Budget_Used__c</fullName>
    <description>This field calculates how much of budget has been used by time entries and expenses.</description>
    <formula>litify_pm__Total_matter_cost__c/ litify_pm__Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates how much of budget has been used by time entries and expenses</inlineHelpText>
    <label>Budget Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>