unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Case_Title__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Case_Title__c</fullName>
    <label>Case Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>