unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Case_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Case_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case Type</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Case type should be available</errorMessage>
        <filterItems>
            <field>litify_pm__Case_Type__c.litify_pm__Is_Available__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>litify_pm__Case_Type__c.litify_pm__ExternalId__c</field>
            <operation>equals</operation>
            <value />
        </filterItems>
        <infoMessage>Case type should be available</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>litify_pm__Case_Type__c</referenceTo>
    <relationshipLabel>Related Matters</relationshipLabel>
    <relationshipName>Related_Matters</relationshipName>
    <type>Lookup</type>
</CustomField>