unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>litify_pm__Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Verdict</fullName>
            </value>
            <value>
                <fullName>Dismissal</fullName>
            </value>
            <value>
                <fullName>Referred Out</fullName>
            </value>
            <value>
                <fullName>Turned Down</fullName>
            </value>
            <value>
                <fullName>Judgement</fullName>
                <isActive>false</isActive>
                <label>Judgement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>