unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Companion__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Companion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the parent companion If this matter is part of a companion set</description>
    <label>Companion</label>
    <referenceTo>litify_pm__Companion__c</referenceTo>
    <relationshipLabel>Companion Matters</relationshipLabel>
    <relationshipName>Matters_Litify</relationshipName>
    <type>Lookup</type>
</CustomField>