unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Contingency_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Contingency_Fee_Rate__c</fullName>
    <label>Contingency Fee Rate (%)</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>