unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Court__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Court__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The court of the matter.</description>
    <label>Court</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matters (Court)</relationshipLabel>
    <relationshipName>Matters2</relationshipName>
    <type>Lookup</type>
</CustomField>