unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Default_Matter_Team__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Default_Matter_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter Team</label>
    <referenceTo>litify_pm__Default_Matter_Team__c</referenceTo>
    <relationshipLabel>Matters</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>