unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Discharge_Date__c</fullName>
    <label>Discharge Date</label>
    <type>Date</type>
</CustomField>