unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Docket_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Docket_Number__c</fullName>
    <label>Docket Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>