unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__FeesDueToOthers__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__FeesDueToOthers__c</fullName>
    <description>Amount in fees due to others</description>
    <label>Fees Due to Others</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>