unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Hourly_Rate__c</fullName>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>