unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Ignore_Default_Plan__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Ignore_Default_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Default Plan</label>
    <type>Checkbox</type>
</CustomField>