unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Limitations_date_satisfied__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Limitations_date_satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limitations date satisfied</label>
    <type>Checkbox</type>
</CustomField>