unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__lit_Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Case_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to the case manager who is responsible for this matter.</description>
    <label>Case Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>lit_Matter_Case_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>