unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__lit_Damage_Total__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Damage_Total__c</fullName>
    <description>The sum of the Amount Due (after reductions) for the Damages on the matter</description>
    <label>Damage Total</label>
    <summarizedField>litify_pm__Damage__c.litify_pm__Amount_Due__c</summarizedField>
    <summaryForeignKey>litify_pm__Damage__c.litify_pm__Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>