unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__lit_Display_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Display_Name_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, IF(ISBLANK(litify_pm__Display_Name__c), Name, litify_pm__Display_Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matter</label>
    <type>Text</type>
</CustomField>