unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__lit_Exact_Source__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Exact_Source__c</fullName>
    <label>Exact Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>