unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__lit_Expense_Total__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Expense_Total__c</fullName>
    <description>The sum of the Amount Due (after reductions) for expenses related to this matter</description>
    <label>Expense Total</label>
    <summarizedField>litify_pm__Expense__c.litify_pm__lit_Amount_Due__c</summarizedField>
    <summaryForeignKey>litify_pm__Expense__c.litify_pm__Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>