unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__lit_Lien_Total__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Lien_Total__c</fullName>
    <description>Sum of Amount Due (after reductions) for Liens related to this matter</description>
    <label>Lien Total</label>
    <summarizedField>litify_pm__Lien__c.litify_pm__lit_Amount_Due__c</summarizedField>
    <summaryForeignKey>litify_pm__Lien__c.litify_pm__lit_Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>