unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__lit_Matter_County__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Matter_County__c</fullName>
    <label>Matter County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>