unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__lit_Partner_Attorney_Fee__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Partner_Attorney_Fee__c</fullName>
    <description>If the referring firm uses a flat fee or hourly fee, the amount owed is stored here</description>
    <inlineHelpText>If the referring firm uses a flat fee or hourly fee, the amount owed is stored here</inlineHelpText>
    <label>Partner Attorney Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>