unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__lit_Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Referral_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referring firm for a given case</description>
    <inlineHelpText>If this case originates from another firm, select the firm here.</inlineHelpText>
    <label>Referral Partner</label>
    <referenceTo>litify_pm__Firm__c</referenceTo>
    <relationshipLabel>Matters</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>