unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__lit_Referral_Partner_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Referral_Partner_Fee_Percent__c</fullName>
    <description>Percentage charged by referring partner</description>
    <inlineHelpText>Enter the percentage if the referring firm uses a percentage based fee.</inlineHelpText>
    <label>Referral Partner Fee Percent</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>