unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__lit_Total_Client_Payout__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Total_Client_Payout__c</fullName>
    <description>The total client payout as calculated by the Settlement Calculator</description>
    <formula>litify_pm__Gross_Recovery__c - litify_pm__lit_Damage_Total__c - litify_pm__lit_Expense_Total__c -  litify_pm__lit_Lien_Total_Currency__c - litify_pm__Net_Attorney_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Client Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>