unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>TextArea</type>
</CustomField>