unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Manual_Statute_of_Limitations__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Manual_Statute_of_Limitations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if the statute of limitations has been manually entered. Automatically set and unset in code.</description>
    <label>Statute of Limitations is Manual</label>
    <type>Checkbox</type>
</CustomField>