unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Matter__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter__c</fullName>
    <description>Formula field that always equals 1. Used in reports as a &quot;Power of One&quot; field.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>