unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Matter_Address_2__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Address_2__c</fullName>
    <label>Matter Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>