unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Matter_City__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_City__c</fullName>
    <label>Matter City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>