unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Matter_Has_Budget__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Has_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matter Has Budget</label>
    <type>Checkbox</type>
</CustomField>