unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Matter_Plan__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>is the that the matter is going to folow</description>
    <label>Matter Plan</label>
    <referenceTo>litify_pm__Matter_Plan__c</referenceTo>
    <relationshipLabel>Matters</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>