unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Matter_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Postal_Code__c</fullName>
    <label>Matter Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>