unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Matter_Stage_Activity__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Stage_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stage</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Selected stage needs to be associated with this Matter</errorMessage>
        <filterItems>
            <field>litify_pm__Matter_Stage_Activity__c.litify_pm__Matter__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>litify_pm__Matter_Stage_Activity__c</referenceTo>
    <relationshipLabel>Matters</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>