unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Matter_Stage_Activity_Formula__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Stage_Activity_Formula__c</fullName>
    <formula>litify_pm__Matter_Stage_Activity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Stage</label>
    <type>Text</type>
</CustomField>