unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Matter_Team_Modified__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Team_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Matter Team was modified for this Matter (checked) or is a clean copy of the Default Matter Team (unchecked)</description>
    <label>Matter Team Modified</label>
    <type>Checkbox</type>
</CustomField>