unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Moved_to_Litigation__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Moved_to_Litigation__c</fullName>
    <label>Moved to Litigation</label>
    <type>Date</type>
</CustomField>