unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Net_Recovery__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Net_Recovery__c</fullName>
    <label>Net Recovery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>