unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Notify_users_when_budget_reached__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Notify_users_when_budget_reached__c</fullName>
    <label>Notify users when % budget reached</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>