unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Open_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Open_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>