unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__OpposingParty__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__OpposingParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Add visibility in matters, intakes and power user permission sets</description>
    <label>Opposing Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matters (Opposing Party)</relationshipLabel>
    <relationshipName>Matters1</relationshipName>
    <type>Lookup</type>
</CustomField>